--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             transition: opacity 0.5s;
         }
 
-        #hacker-overlay, #snow-overlay {
+        #p8stol-overlay, #snow-overlay {
             position: fixed;
             top: 0;
             left: 0;
@@ -550,23 +550,23 @@
             border-color: rgba(0, 195, 255, 0.5);
         }
 
-        .hacker-theme #profile-block,
-        .hacker-theme #skills-block {
+        .p8stol-theme #profile-block,
+        .p8stol-theme #skills-block {
             border-color: rgba(0, 255, 0, 0.5);
         }
 
-        .rain-theme #profile-block,
+        .p8stol-theme #profile-block,
         .rain-theme #skills-block {
             border-color: rgba(100, 149, 237, 0.5);
         }
 
-        .anime-theme #profile-block,
-        .anime-theme #skills-block {
+        .p8stol-theme #profile-block,
+        .p8stol-theme #skills-block {
             border-color: rgba(255, 0, 255, 0.5);
         }
 
-        .car-theme #profile-block,
-        .car-theme #skills-block {
+        .p8stol-theme #profile-block,
+        .p8stol-theme #skills-block {
             border-color: rgba(255, 165, 0, 0.5);
         }
 
@@ -835,7 +835,7 @@
         </video>
 
         <div class="glitch-overlay"></div>
-        <div id="hacker-overlay" class="hidden"></div>
+        <div id="p8stol-overlay" class="hidden"></div>
         <div id="snow-overlay" class="hidden"></div>
 
         <div id="profile-block">
@@ -940,16 +940,16 @@
     <audio id="background-music" loop>
         <source src="assets/p8stol_music.mp3" type="audio/mp3">
     </audio>
-    <audio id="hacker-music" loop muted>
+    <audio id="p8stol-music" loop muted>
         <source src="assets/p8stol_music.mp3" type="audio/mp3">
     </audio>
-    <audio id="rain-music" loop muted>
+    <audio id="p8stol-music" loop muted>
         <source src="assets/p8stol_music.mp3" type="audio/mp3">
     </audio>
-    <audio id="anime-music" loop muted>
+    <audio id="p8stol-music" loop muted>
         <source src="assets/p8stol_music.mp3" type="audio/mp3">
     </audio>
-    <audio id="car-music" loop muted>
+    <audio id="p8stol-music" loop muted>
         <source src="assets/p8stol_music.mp3" type="audio/mp3">
     </audio>
 
